infra/loki/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loki
  namespace: infra
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loki
  template:
    metadata:
      labels:
        app: loki
    spec:
      containers:
        - name: loki
          image: grafana/loki:3.0.0
          args: ["-config.file=/etc/loki/loki-config.yaml"]
          securityContext:
            runAsUser: 0
          ports:
            - containerPort: 3100
          volumeMounts:
            - name: loki-storage
              mountPath: /loki
            - name: loki-config
              mountPath: /etc/loki
      volumes:
        - name: loki-storage
          emptyDir: {}
        - name: wal
          emptyDir: { }
        - name: loki-config
          configMap:
            name: loki-config
